# Transformer-Based-Pre-Trained-NLP-Models

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  Roberta_model_new.ipynb  SECURITY.md  albert_model.ipynb  bert_model.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: albert.yaml  bert.yaml  roberta.yaml
docs/: MODEL_CARD.md  REPRODUCIBILITY.md  RESULTS.md
src/transformer_sentiment/: __init__.py  data.py  metrics.py  model.py  train.py
tests/: test_data.py  test_metrics.py  test_model.py
