[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-sentiment-comparison"
version = "1.0.0"
description = "Reproducible BERT, RoBERTa and ALBERT sentiment comparison from Singla and Ramachandra (2020)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Saurav Singla"}]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "PyYAML>=6.0,<7",
  "torch>=2.1,<3",
  "transformers>=4.40,<5",
  "accelerate>=0.30,<2",
  "openpyxl>=3.1,<4",
]

[project.scripts]
transformer-sentiment = "transformer_sentiment.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
